--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 }
 
                 if(car.seTocan(player)){
-                    if(car.x === player.x )
+                    if(car.x === player.x || car.y === player.y)
                     ctx.gameOver();
                 }
 
