--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crossy Roba</title>
     <style>
-        canvas{
-            background-color: white; 
+        canvas {
+            background-color: white;
         }
-        body{
-            background-color: #171718;
+
+        body {
+            background-color: black;
         }
     </style>
 </head>
+
 <body>
     <center>
         <canvas width="900" height="600" id="myCanvas"></canvas>
