--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
         ladron.src = "Ladron.png";
-        carretera.src = "Carretera.jpg";
+        carretera.src = "carretera.jpg";
         policia.src = "Policia.png";
         cartera.src = "Cartera.png";
         fondo.src = "Fondo.png";
